fix: solve the section overflow problem for specific resolutions

--- a/src/sass/_medium.scss
+++ b/src/sass/_medium.scss
@@ -19,7 +19,7 @@
         .members {
             &__box {
                 flex-direction: row;
-                height: 100vh;
+                flex-wrap: wrap;
                 padding: 2em 0.5em;
             }
     
