--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -193,7 +193,6 @@ body {
 			justify-content: center;
 			align-items: center;
 			flex-direction: column;
-			flex-wrap: wrap;
 			padding: 2em 0.5em;
 		}
 
